Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12420

llog_reader crashes when reading llog that is not inited

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • None
    • None
    • 3
    • 9223372036854775807

      I think the problem is easy to reproduce. On a Lustre file system that doesn't have nodemap configured, which is the majority case I think, do the following:

      1. mount -t ldiskfs $MGT $MNT
      2. llog_reader $MNT/CONFIGS/nodemap
        llog_reader will quit with following error:
       llog_reader: Error allocating -16 bytes for recs_buf: Cannot allocate memory (12)
       llog_reader: Could not pack buffer.: Cannot allocate memory (12)
      

      Apparently, the llog of nodemap is never initialized so all the values are gabage.

      Header size : 3987452397
      Time : Fri Jan 2 20:30:12 1970
      Number of records: 4294967295
      Target uuid :
      

      I think in this case, llog_reader should just quit with proper message printed.

            lixi_wc Li Xi
            lixi_wc Li Xi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: